feat: enriched products
